other/require-emptydir-requests-limits/.chainsaw-test/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: busybox
  name: badpod01
spec:
  initContainers:
  - image: ghcr.io/kyverno/test-busybox:1.35
    name: busybox-init
    volumeMounts:
    - mountPath: /mnt/foo
      name: foo
    resources:
      requests:
        ephemeral-storage: "2Gi"
      limits:
        ephemeral-storage: "2Gi"
  - image: ghcr.io/kyverno/test-busybox:1.35
    name: busybox02-init
    volumeMounts:
    - mountPath: /mnt/vol
      name: vol
  containers:
  - image: ghcr.io/kyverno/test-busybox:1.35
    name: busybox
    volumeMounts:
    - mountPath: /mnt/foo
      name: foo-host
  - image: ghcr.io/kyverno/test-busybox:1.35
    name: busybox02
    resources:
      requests:
        ephemeral-storage: "2Gi"
      limits:
        ephemeral-storage: "2Gi"
    volumeMounts:
    - mountPath: /mnt/vol
      name: vol
  volumes:
  - name: vol
    emptyDir: {}
  - name: foo
    emptyDir:
      medium: Memory
  - name: foo-host
    hostPath:
      path: /var/foo
