other/require-emptydir-requests-limits/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      volumeMounts:
      - mountPath: /mnt/foo
        name: foo
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
      resources:
        requests:
          ephemeral-storage: "2Gi"
        limits:
          ephemeral-storage: "2Gi"
  volumes:
    - name: foo
      emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      volumeMounts:
        - mountPath: /cache/data
          name: vol
  volumes:
    - name: vol
      emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      volumeMounts:
        - mountPath: /mnt/vol
          name: vol
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
      volumeMounts:
        - mountPath: /mnt/foo
          name: foo
  volumes:
    - name: vol
      emptyDir:
        medium: Memory
    - name: foo
      emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  initContainers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox-init
      volumeMounts:
      - mountPath: /mnt/foo
        name: foo
      resources:
        requests:
          ephemeral-storage: "2Gi"
        limits:
          ephemeral-storage: "2Gi"
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02-init
      volumeMounts:
      - mountPath: /mnt/vol
        name: vol
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      volumeMounts:
      - mountPath: /mnt/vol
        name: vol
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
      resources:
        requests:
          ephemeral-storage: "2Gi"
        limits:
          ephemeral-storage: "2Gi"
      volumeMounts:
      - mountPath: /mnt/foo
        name: foo
  volumes:
    - name: vol
      emptyDir: {}
    - name: foo
      emptyDir:
        medium: Memory
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      resources:
        requests:
          ephemeral-storage: "2Gi"
      volumeMounts:
        - mountPath: /cache/data
          name: vol
  volumes:
    - name: vol
      emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      resources:
        requests:
          ephemeral-storage: "2Gi"
      volumeMounts:
        - mountPath: /cache/data
          name: vol
  volumes:
    - name: vol
      emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod07
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      resources:
        limits:
          memory: "2Gi"
        requests:
          memory: "2Gi"
      volumeMounts:
        - mountPath: /cache/data
          name: vol
  volumes:
    - name: vol
      emptyDir: {}
