other/require-emptydir-requests-limits/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      resources:
        requests:
          ephemeral-storage: "2Gi"
        limits:
          ephemeral-storage: "2Gi"
      volumeMounts:
        - mountPath: /cache/data
          name: vol
  volumes:
    - name: vol
      emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      volumeMounts:
        - mountPath: /cache/data
          name: vol
  volumes:
    - name: vol
      emptyDir:
        medium: Memory
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  initContainers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox-init
      volumeMounts:
      - mountPath: /mnt/vol
        name: vol
      resources:
        requests:
          ephemeral-storage: "2Gi"
        limits:
          ephemeral-storage: "2Gi"
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02-init
      volumeMounts:
      - mountPath: /mnt/foo
        name: foo
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      volumeMounts:
      - mountPath: /mnt/foo
        name: foo
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
      resources:
        requests:
          ephemeral-storage: "2Gi"
        limits:
          ephemeral-storage: "2Gi"
      volumeMounts:
      - mountPath: /mnt/vol
        name: vol
  volumes:
    - name: vol
      emptyDir: {}
    - name: foo
      emptyDir:
        medium: Memory
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  initContainers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox-init
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02-init
      volumeMounts:
      - mountPath: /mnt/foo
        name: foo
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      volumeMounts:
      - mountPath: /mnt/foo
        name: foo
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
  volumes:
    - name: vol
      emptyDir: {}
    - name: foo
      emptyDir:
        medium: Memory
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      volumeMounts:
      - mountPath: /mnt/foo
        name: foo
      resources:
        requests:
          ephemeral-storage: "2Gi"
        limits:
          ephemeral-storage: "2Gi"
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
  volumes:
    - name: foo
      emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      volumeMounts:
      - mountPath: /mnt/foo
        name: foo
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
  volumes:
    - name: foo
      hostPath: 
        path: /var/foo
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod08
spec:
  initContainers:
    - name: certificates
      image: ghcr.io/kyverno/test-busybox
      volumeMounts:
        - name: etc-ssl-certs
          mountPath: /etc/ssl/certs
      resources:
        limits:
          ephemeral-storage: 256Mi
        requests:
          ephemeral-storage: 256Mi
    - name: configure
      image: ghcr.io/kyverno/test-busybox
      volumeMounts:
        - name: etc-ssl-certs
          mountPath: /etc/ssl/certs/
        - name: my-app-secrets
          mountPath: /init-secrets
      resources:
        limits:
          ephemeral-storage: 256Mi
        requests:
          ephemeral-storage: 256Mi
  containers:
    - name: my-app
      image: ghcr.io/kyverno/test-busybox
      resources:
        limits:
          cpu: "2"
          ephemeral-storage: 1Gi
          memory: 500Mi
        requests:
          ephemeral-storage: 500Mi
      volumeMounts:
        - name: etc-ssl-certs
          mountPath: /etc/ssl/certs/
        - name: my-app-secrets
          mountPath: /etc/secrets
  volumes:
    - name: my-app-secrets
      emptyDir:
        medium: Memory
    - name: etc-ssl-certs
      emptyDir:
        medium: "Memory"
