other/require-emptydir-requests-limits/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-emptydir-requests-and-limits
status:
  ready: true
